completed the working on: searching feature based on restaurant name or category or food name

--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@
   overflow: hidden;
   position: absolute;
 }
+.search-form {
+  width: 100%;
+  display: flex;
+}
 .featured-product {
   /* background-color: red; */
   padding-top: 15px;
